# docling-metrics

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  pyproject.toml  run_eval.py
.github/: SECURITY.md
.github/scripts/: release.sh
.github/workflows/: cd.yml  ci.yml  dco-advisor.yml  job-checks.yml  pypi.yml  wheels.yml
docling-metric-teds/: .gitignore  CMakeLists.txt
docling-metric-teds/benchmark/benchmark/: benchmark.py  main.py  test_bracket_serialization.py
docling-metric-teds/cmake/: extlib_json.cmake  extlib_loguru.cmake
docling-metric-teds/devtools/: build_cpp.sh
docling-metric-teds/test/common/: to_string_converters.h
docling-metric-teds/test/cted_ub/: CMakeLists.txt
docling-metric-teds/test/jediorder_wang/: CMakeLists.txt
docling-metric-teds/test/lgm_ub/: CMakeLists.txt
docling-metric-teds/test/ted/: CMakeLists.txt
docling_metric_types/: __init__.py  base_types.py
tests/: test_placeholder.py
