[project]
name = "docling-metrics-workspace"
version = "0.0.0"
requires-python = '>=3.10,<4.0'

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pre-commit~=3.7",
    "mypy~=1.10",
    "ruff~=0.11",
    "types-setuptools~=70.3",
    "python-semantic-release~=7.32",
    "coverage~=7.6",
    "pytest~=8.3",
    "pytest-cov>=6.1.1",
    "pytest-dependency~=0.6",
    "pytest-xdist~=3.3",
    "clang-format>=19.1.7",
    "build",
    # Workspace members — ensures `uv sync` installs all packages
    "docling-metrics-core",
    "docling-metrics-hello-world",
    "docling-metrics-layout",
    "docling-metrics-table",
    "docling-metrics-hello-world-cpp",
]
build = [
    "cibuildwheel>=2.19",
    "delocate>=0.12",
]

[tool.uv.sources]
docling-metrics-core = { workspace = true }
docling-metrics-hello-world = { workspace = true }
docling-metrics-layout = { workspace = true }
docling-metrics-table = { workspace = true }
docling-metrics-hello-world-cpp = { workspace = true }
docling-metrics-text = { workspace = true }

[tool.mypy]
pretty = true
# strict = true
no_implicit_optional = true
python_version = "3.10"
exclude = [
    '^\\.venv/',
    'build/',
    'externals/',
    '.*/build/.*',
    '.*/externals/.*',
]

ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["docling_metrics_layout.*"]
disable_error_code = ["var-annotated"]

[tool.ruff]
target-version = "py310"
line-length = 88
respect-gitignore = true

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "C",  # flake8-comprehensions
    "C9",  # mccabe
    "E",  # pycodestyle errors (default)
    "F",  # pyflakes (default)
    "I",  # isort
    "PD", # pandas-vet
    "PIE", # pie
    "Q",  # flake8-quotes
    "RUF", # Enable all ruff-specific checks
    "S307", # eval
    "W",  # pycodestyle warnings
    "ASYNC" # async
]

ignore = [
    "E501",  # Line too long, handled by ruff formatter
    "D107", # "Missing docstring in __init__",
    "F811", # "redefinition of the same function"
    "PL", # Pylint
    "RUF012", # Mutable Class Attributes

    #
    "PD901",  # Allow generic DataFrame variable name `df`
    "C901",   # Allow complex functions
    "RUF005", # Allow list concatenation
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    # Allow Pydantic's `@validator` decorator to trigger class method treatment.
    "pydantic.validator",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/tests/*.py" = ["ASYNC"] # Disable ASYNC check for tests

[tool.pytest.ini_options]
# Use importlib import mode for monorepo compatibility
addopts = "--import-mode=importlib"
